codex-rs/tui/src/bottom_pane/request_user_input/snapshots/codex_tui__bottom_pane__request_user_input__tests__request_user_input_freeform.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                                                                                         
  Question 1/1 (1 unanswered)                                                                                           
  Goal                                                                                                                  
  Share details.                                                                                                        
                                                                                                                         
  › Type your answer (optional)                                                                                         
                                                                                                                         
                                                                                                                         
  enter to submit answer | esc to interrupt                                                                             
