codex-rs/tui/src/bottom_pane/request_user_input/snapshots/codex_tui__bottom_pane__request_user_input__tests__request_user_input_tight_height.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                                                                                         
  Question 1/1 (1 unanswered)                                                                                           
  Area                                                                                                                  
  Choose an option.                                                                                                     
                                                                                                                         
  › 1. Option 1  First choice.                                                                                          
    2. Option 2  Second choice.                                                                                         
                                                                                                                         
  option 1/3 | tab to add notes | enter to submit answer | esc to interrupt                                             
